--- a/index.html
+++ b/index.html
@@ -49,13 +49,14 @@
 								<header class="major">
 									
 									<h2><a href="#">Microsoft Movie Recommendation<br /></a></h2>
-									<p>This is a project; beginner project as a data analyst. Interacting with Pandas Library, numpy<br />
-									and briefly statistics. This project is a highlight of what data analysis is and can be a<br />
+									<p> A recommendation system that provides personalized movie recommendations based on user preferences and similarities with other users, <br />
+									and also aim to improve user satisfaction, increase user engagement, <br /> ultimately drive user's retention on the platform.<br />
+									and briefly statistics. <br /> This project is a highlight of what data analysis is and can be a<br />
 									start to a data science journey.</p>
 								</header>
 								<a href="#" class="image main"><img src="istockphoto-1202770121-612x612.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/Edna722/Movie-Recommendation" class="button large">View project</a></li>
+									<li><a href="https://github.com/Edna722/Movie-Recommendation-Data" class="button large">View project</a></li>
 								</ul>
 							</article>
 
