--- a/index.html
+++ b/index.html
@@ -77,12 +77,14 @@
 							<article>
 								<header>
 								
-									<h2><a href="#">WIDS Datathon: Team Work <br /></a></h2>
+									<h2><a href="#">AfricanmTech Girl Hackathon: Diabetes Predicition <br /></a></h2>
 								</header>
-								<a href="#" class="image fit"><img src="WIDS.jpg" alt="" /></a>
-								<p>This projects' main goal focuses on longer-term weather forecasting to help communities adapt to extreme weather events caused by climate change.</p>
+								<a href="#" class="image fit"><img src="C:\Users\wanji\Desktop\Portfolio\New-Portfolio.github.io\Diabetes.jpeg" alt="" /></a>
+								<p>The main objective of this project is to build a machine learning model <br /> that can predict the occurrence of diabetes <br />
+								in patients based on their medical history <br /> 
+								and demographic information</p>
 								<ul class="actions special">
-									<li><a href="https://github.com/Edna722/WIDS-DATA" class="button">View Project</a></li>
+									<li><a href="https://github.com/Edna722/Africantech-Hackathon/tree/main" class="button">View Project</a></li>
 								</ul>
 							</article>
 							<article>
