--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 								
 									<h2><a href="#">AfricanmTech Girl Hackathon: Diabetes Predicition <br /></a></h2>
 								</header>
-								<a href="#" class="image fit"><img src="C:\Users\wanji\Desktop\Portfolio\New-Portfolio.github.io\Diabetes.jpeg" alt="" /></a>
+								<a href="#" class="image fit"><img src="C:\Users\wanji\Desktop\Portfolio\New-Portfolio.github.io\OIP.jpeg" alt="" /></a>
 								<p>The main objective of this project is to build a machine learning model <br /> that can predict the occurrence of diabetes <br />
 								in patients based on their medical history <br /> 
 								and demographic information</p>
