--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 							<article>
 								<header>
 								
-									<h2><a href="#">AfricanmTech Girl Hackathon: Diabetes Predicition <br /></a></h2>
+									<h2><a href="#">AfricanTech Girl Hackathon: Diabetes Predicition <br /></a></h2>
 								</header>
-								<a href="#" class="image fit"><img src="C:\Users\wanji\Desktop\Portfolio\New-Portfolio.github.io\OIP.jpeg" alt="" /></a>
+								<a href="#" class="image fit"><img src="OIP.jpeg" alt="" /></a>
 								<p>The main objective of this project is to build a machine learning model <br /> that can predict the occurrence of diabetes <br />
 								in patients based on their medical history <br /> 
 								and demographic information</p>
