--- a/index.html
+++ b/index.html
@@ -114,15 +114,15 @@
 
 							<article>
 								<header>
-									<h2><a href="https://github.com/Edna722/Movie-Recommendation-Data">Omdena Machakos Project: Unemployment Hackathon Project<br /></a></h2>
+									<h2><a href="https://github.com/Edna722/Omdena-Machakos-Unemployment/tree/main">Omdena Machakos Project: Unemployment Hackathon Project<br /></a></h2>
 								</header>
-								<a href="#" class="image fit"><img src="movies-1.png" alt="" /></a>
+								<a href="#" class="image fit"><img src="Unemployment.jpeg" alt="" /></a>
 								<p>The Omdena Machakos Unemployment Hackathon Project focused on tackling high unemployment in Machakos County, Kenya,<br />
 								through data-driven methods.<br />
 								The project utilized machine learning and data analytics to identify key unemployment factors and provide actionable insights for policy-making and interventions. <br />
 								The hackathon involved a collaborative effort from data scientists and domain experts to create sustainable solutions <br />for reducing unemployment and improving socio-economic conditions in the region.</p>
 								<ul class="actions special">
-									<li><a href="https://github.com/Edna722/Movie-Recommendation-Data" class="button">View Project</a></li>
+									<li><a href="https://github.com/Edna722/Omdena-Machakos-Unemployment/tree/main" class="button">View Project</a></li>
 								</ul>
 							</article>
 
