--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
 							<article>
 								<header>
-									<h2><a href="https://github.com/Edna722/Diabetes-Capstone-Project">Diabetes Project<br /></a></h2>
+									<h2><a href="https://github.com/Edna722/Diabetes-Capstone-Project">Diabetes Capstone Project: Readmission<br /></a></h2>
 								</header>
 								<a href="#" class="image fit"><img src="image 4.jpg" alt="" /></a>
 								<p>This is a detailed data engineering project as well but involves Time Series. The main aim is to come up also with a system that will show users to purchase based on the price now and those predicted in the coming years depending with the data duration/ Span given. Its still in progress because also time series needs to be correspodn and highly accurate. In this case the ARIMA model is greatly used to achieve and will achieve this, Flask as well that will be used to develop the system in this case a website</p>
