--- a/index.html
+++ b/index.html
@@ -105,7 +105,8 @@
 									<h2><a href="https://github.com/Edna722/Final-Year-Project">Crime Prediction System<br /></a></h2>
 								</header>
 								<a href="#" class="image fit"><img src="images.jpg" alt="" /></a>
-								<p>The first project I ever did on Machine Learning. One week research and did the project using Weka. No visualizations or analaysis done only that data was split into train and test to give classification of metrics used</p>
+								<p>The first project I ever did on Machine Learning. One week research and did the project using Weka.<br />
+								No visualizations or analaysis done only that data was split into train and test to give classification of metrics used</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/Edna722/Final-Year-Project" class="button">View Project</a></li>
 								</ul>
@@ -131,7 +132,10 @@
 									<h2><a href="https://github.com/Edna722/E-commerce-project">E-Commerce System<br /></a></h2>
 								</header>
 								<a href="#" class="image fit"><img src="Ecommerce.jpg" alt="" /></a>
-								<p>This is a detailed data engineering project as well but involves Time Series. The main aim is to come up also with a system that will show users to purchase based on the price now and those predicted in the coming years depending with the data duration/ Span given. Its still in progress because also time series needs to be correspodn and highly accurate. In this case the ARIMA model is greatly used to achieve and will achieve this, Flask as well that will be used to develop the system in this case a website</p>
+								<p>This is a detailed data engineering project as well but involves Time Series. <br />
+								The main aim is to come up also with a system that will show users to purchase based on the price now and those predicted in the coming years depending with the data duration/ Span given. <br />
+								Its still in progress because also time series needs to be correspodn and highly accurate. In this case the ARIMA model is greatly used to achieve and will achieve this, <br />
+								Flask as well that will be used to develop the system in this case a website</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/Edna722/E-commerce-project" class="button">View Project</a></li>
 								</ul>
@@ -143,9 +147,28 @@
 									<h2><a href="https://github.com/Edna722/Diabetes-Capstone-Project">Diabetes Capstone Project: Readmission<br /></a></h2>
 								</header>
 								<a href="#" class="image fit"><img src="image 4.jpg" alt="" /></a>
-								<p>This is a detailed data engineering project as well but involves Time Series. The main aim is to come up also with a system that will show users to purchase based on the price now and those predicted in the coming years depending with the data duration/ Span given. Its still in progress because also time series needs to be correspodn and highly accurate. In this case the ARIMA model is greatly used to achieve and will achieve this, Flask as well that will be used to develop the system in this case a website</p>
+								<p>Developed a predictive model to accurately estimate the likelihood of readmission for diabetic patients.<br />
+									Identified key factors associated with readmission to enable proactive intervention by healthcare providers.<br />
+									Enhanced patient management by providing insights for appropriate care, thereby reducing readmission rates.<br />
+									Utilized data analytics and machine learning techniques to improve the accuracy and reliability of the predictions</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/Edna722/Diabetes-Capstone-Project" class="button">View Project</a></li>
+								</ul>
+							</article>
+
+
+							<article>
+								<header>
+									<h2><a href="https://github.com/orgs/Green-Speed-Hack4Climate/repositories">Hack4Climate: GreenSpeed Project <br /></a></h2>
+								</header>
+								<a href="#" class="image fit"><img src="Green Speed - White Bg.png" alt="" /></a>
+								<p>Developed Greenspeed, an innovative tool designed to promote sustainable transportation choices.<br />
+								The tool estimates travel times and calculates emissions for various modes of transportation, helping users make environmentally friendly travel decisions.<br />
+								Utilized data analytics and machine learning to provide accurate and real-time travel time and emissions data.<br />
+								Integrated user-friendly interfaces to enhance accessibility and user engagement.<br/>
+								Contributed to reducing carbon footprints and promoting greener travel alternatives through informed decision-making</p>
+								<ul class="actions special">
+									<li><a href="https://github.com/orgs/Green-Speed-Hack4Climate/repositories" class="button">View Project</a></li>
 								</ul>
 							</article>
 
