--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 									
 									<h2><a href="#">Microsoft Movie Recommendation<br /></a></h2>
 									<p> A recommendation system that provides personalized movie recommendations based on user preferences and similarities with other users, <br />
-									and also aim to improve user satisfaction, increase user engagement, <br /> ultimately drive user's retention on the platform.<br />
-									and briefly statistics. <br /> This project is a highlight of what data analysis is and can be a<br />
+									and also aim to improve user satisfaction, increase user engagement,ultimately drive user's retention on the platform.<br />
+									and briefly statistics. This project is a highlight of what data analysis is and can be a<br />
 									start to a data science journey.</p>
 								</header>
 								<a href="#" class="image main"><img src="istockphoto-1202770121-612x612.jpg" alt="" /></a>
@@ -80,9 +80,8 @@
 									<h2><a href="#">AfricanTech Girl Hackathon: Diabetes Predicition <br /></a></h2>
 								</header>
 								<a href="#" class="image fit"><img src="OIP.jpeg" alt="" /></a>
-								<p>The main objective of this project is to build a machine learning model <br /> that can predict the occurrence of diabetes <br />
-								in patients based on their medical history <br /> 
-								and demographic information</p>
+								<p>The main objective of this project is to build a machine learning model that can predict the occurrence of diabetes <br />
+								in patients based on their medical history and demographic information</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/Edna722/Africantech-Hackathon/tree/main" class="button">View Project</a></li>
 								</ul>
@@ -93,8 +92,8 @@
 								</header>
 								<a href="#" class="image fit"><img src="download.png" alt="" /></a>
 								<p>This project is designed to help analysts and researchers better
-									understand the e-commerce landscape in Brazil and identify opportunities for growth and
-									optimization.</p>
+								understand the e-commerce landscape in Brazil and identify opportunities for growth and
+								optimization.</p>
 								<ul class="actions special">
 									<li><a href="https://github.com/Edna722/Data-Analysis-Challenge" class="button">View Project</a></li>
 								</ul>
