--- a/index.html
+++ b/index.html
@@ -164,8 +164,7 @@
 								<p>Developed Greenspeed, an innovative tool designed to promote sustainable transportation choices.<br />
 								The tool estimates travel times and calculates emissions for various modes of transportation, helping users make environmentally friendly travel decisions.<br />
 								Utilized data analytics and machine learning to provide accurate and real-time travel time and emissions data.<br />
-								Integrated user-friendly interfaces to enhance accessibility and user engagement.<br/>
-								Contributed to reducing carbon footprints and promoting greener travel alternatives through informed decision-making</p>
+								Integrated user-friendly interfaces to enhance accessibility and user engagement.<br/></p>
 								<ul class="actions special">
 									<li><a href="https://github.com/orgs/Green-Speed-Hack4Climate/repositories" class="button">View Project</a></li>
 								</ul>
