--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>EDNA WANJIKU PORTFOLIO<br /></h1>
-						<p>Data analyst upscaling to a data engineer skilled in Python, SQL and Tableu <a href="https://twitter.com/Edna4440?s=09">@Edna440</a>
-						<ul class="actions">
+						<p>Data analyst upscaling to a data engineer skilled in Python, SQL and Tableu
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
 					</div>
@@ -35,7 +34,6 @@
 					<nav id="nav">
 
 						<ul class="icons">
-							<li><a href="https://twitter.com/Edna4440?s=09" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.linkedin.com/in/edna-wanjiku-70647419b/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/Edna722" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
@@ -192,7 +190,6 @@
 						<section>
 							<h3>Social</h3>
 							<ul class="icons alt">
-								<li><a href="https://twitter.com/Edna4440?s=09" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.linkedin.com/in/edna-wanjiku-70647419b/" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="https://github.com/Edna722" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 							</ul>
