--- a/index.html
+++ b/index.html
@@ -168,6 +168,20 @@
 								</ul>
 							</article>
 
+						
+							<article>
+								<header>
+									<h2><a href="https://github.com/Edna722/wids-datathon-new">WIDS Kenya: ADHD Prediction <br /></a></h2>
+								</header>
+								<a href="#" class="image fit"><img src="ADHD image.jpg" alt="" /></a>
+								<p>In this year's WiDS Datathon, I developed a multi-outcome machine learning model to predict an individual's sex and ADHD diagnosis based on functional brain imaging data of children and adolescents. <br /> 
+								The dataset included socio-demographic, emotional, and parenting information.<br />
+								The goal was to explore brain activity patterns linked to ADHD and determine if they differ between males and females. I built a predictive model with two target variables: ADHD diagnosis (1 = Yes, 0 = No)Sex classification (1 = Female, 0 = Male).<br />
+								This project enhanced my skills in multi-label classification, feature engineering, and model evaluation while addressing a critical challenge in neurodevelopmental research.<br /><br/></p>
+								<ul class="actions special">
+									<li><a href="https://github.com/Edna722/wids-datathon-new" class="button">View Project</a></li>
+								</ul>
+							</article>
 
 
 						</section>
